--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,20 @@ __pycache__
 *.pyc
 .venv
 docs
+.venv/
+env/
+venv/
+
+.env
+
+node_modules/
+
+*.faiss
+metadata.npy
+
+.git/
+
+.streamlit/
+
+*.log
+*.tmp
