--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,33 @@ langchain
 langchain_openai 
 langchain_community
 faiss-cpu
+altair==5.4.1
+annotated-types==0.7.0
+anyio==4.4.0
+attrs==24.2.0
+blinker==1.8.2
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+distro==1.9.0
+exceptiongroup==1.2.2
+gitdb==4.0.11
+GitPython==3.1.43
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.2
+idna==3.8
+Jinja2==3.1.4
+jiter==0.5.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+narwhals==1.6.2
+langchain>=0.1.0
+langchain-openai>=0.0.3  
+langchain-community>=0.0.10
+streamlit>=1.30.0
