--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,5 @@ langchain>=0.1.0
 langchain-openai>=0.0.3  
 langchain-community>=0.0.10
 streamlit>=1.30.0
+tree-sitter==0.21.3
+tree-sitter-languages
