--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ narwhals==1.6.2
 langchain>=0.1.0
 langchain-openai>=0.0.3  
 langchain-community>=0.0.10
+pandas>=2.0.0
 streamlit>=1.30.0
 tree-sitter==0.21.3
 tree-sitter-languages
