Synthesizing saving of indexes
Signed-off-by: ayesparshh <sparshgupta1001@gmail.com>

--- a/example.env
+++ b/example.env
@@ -5,8 +5,8 @@ AZURE_EMBEDDING_DEPLOYMENT=text-embedding-ada-002
 AZURE_CHAT_DEPLOYMENT=gpt-4
 
 # Project Directory Configuration
-WATCHED_DIR=/home/user/projects/my_codebase
+WATCHED_DIR=D:/sparsh-rag/keployrag
 
 # FAISS Configuration
-FAISS_INDEX_FILE=/home/user/projects/keployrag/faiss_index.bin
+FAISS_INDEX_FILE=D:/sparsh-rag/faiss_index.bin
 EMBEDDING_DIM=1536
